# big_data_lab4

./: .gitignore  Dockerfile  README.md  config.ini  data.dvc  docker-compose.yml  jenkins.dockerfile  model.dockerfile  pyproject.toml  requirements.txt  vault.dockerfile
.dvc/: config
CD/: Jenkinsfile
CI/: Jenkinsfile
data/: Abalone_X.csv  Abalone_y.csv  Test_Abalone_X.csv  Test_Abalone_y.csv  Train_Abalone_X.csv  Train_Abalone_y.csv
experiments/: d_tree.sav  gnb.sav  knn.sav  log_reg.sav  svm.sav
experiments/exp_test_1_2024_04_08_17_24_02/: exp_config.yaml
experiments/exp_test_1_2024_04_08_21_32_19/: exp_config.yaml
notebooks/: abalone.ipynb
src/: app.py  config.ini  db_init.py  kafka_service.py  logger.py  predict.py  preprocess.py  train.py
src/unit_tests/: test_preprocess.py  test_training.py
tests/: test_0.json  test_1.json
